apps/complex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: complex-ingress
  labels:
    app: complex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - complex.wolfixor.shop
    secretName: complex-tls
  rules:
  - host: complex.wolfixor.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: complex
            port:
              number: 80
